<resources>
    <string name="app_name">ST046_AudioEditorandMusicEditor</string>
    <string name="do_you_like_the_app">Do you like the app</string>
    <string name="let_us_know_your_experience">Let us know your experience</string>
    <string name="rate">Rate</string>
    <string name="exit">Exit</string>
    <string name="setting">Setting</string>
    <string name="please_select_a_rating_before_submitting">Please select a rating before submitting!</string>
    <string name="enter_name">Enter name</string>
    <string name="thank_you_for_your_rating">Thank you for your rating</string>
    <string name="please_give_us_some_feedback">Please give us some feedback</string>
    <string name="thanks_for_your_feedback">Thanks for your feedback</string>
    <string name="oh_no">Oh no!</string>
    <string name="we_love_you_too">We love you too!</string>
    <string name="next">Next</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="permission">Permission</string>
    <string name="cancel">Cancel</string>
    <string name="please_grant_permission">Please grant permission</string>
    <string name="notification">Audio Editor requires permission to use the Notification, Media and Files on your device</string>
    <string name="storages">Audio Editor requires permission to use the Media and Files on your device</string>
    <string name="quyen">Please grant permission to the application</string>
    <string name="best_audio_editor">Best Audio Editor</string>
    <string name="easy_to_cut_music">Easy To Cut Music</string>
    <string name="magic_of_voice_changing_effects">Magic of Voice Changing Effects</string>
    <string name="continues">Continue</string>
    <string name="storage">Storage</string>
    <string name="language">Language</string>
    <string name="share">Share</string>
    <string name="privacy_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="this_action_can_contain_ads">This action can contain ads</string>
    <string name="allow">Allow</string>
    <string name="to_access_photos_media_and_files_on_your_device">to access Photos, Media and Files on your device</string>
    <string name="audio_editor"> Audio Editor</string>
    <string name="are_you_sure_want_to_exit_without_saving">Are you sure want to exit without saving?</string>
    <string name="create_name">Create Name</string>
    <string name="playing_mixed_music">Playing mixed music</string>
    <string name="notifica">Notification</string>
    <string name="music_and_audio">Music and audio</string>
    <string name="mp3_cutter">MP3 Cutter</string>
    <string name="which_function_do_you_want_to_use">Which function do you want to use?</string>
    <string name="merge">Merge</string>
    <string name="equalizer">Equalizer</string>
    <string name="mixer">Mixer</string>
    <string name="speed">Speed</string>
    <string name="volume">Volume</string>
    <string name="voice_changer">Voice Changer</string>
    <string name="audio_to_text">Audio to Text</string>
    <string name="get_started">Get Started</string>
    <string name="mp3cutter">MP3 Cutter</string>
    <string name="merger">Merger</string>
    <string name="lyrics">Lyrics</string>
    <string name="no_lyrics_found_in_this_mp3_file">No lyrics found in this MP3 file.</string>
    <string name="failed_to_save_audio_file">Failed to save audio file!</string>
    <string name="voice_effect">Voice Effect</string>
    <string name="error_playing_audio">Error playing audio</string>
    <string name="error_saving_modified_audio_for">"Error saving modified audio for: "</string>
    <string name="save">Save</string>
    <string name="set_volume">Extra Volume</string>
    <string name="speed_audio">Speed Audio</string>
    <string name="total_time">Total time:</string>
    <string name="replace">Replace</string>
    <string name="cut_audio">Cut Audio</string>
    <string name="delete">Delete</string>
    <string name="saving_audio">Saving Audio</string>
    <string name="stand_by_while_file_is_saving">Stand by while file is saving...</string>
    <string name="my_audio">My Audio</string>
    <string name="select_audio">Select Audio</string>
    <string name="search">Search...</string>
    <string name="no_items_have_been_selected_yet">No items have been selected yet</string>
    <string name="select_at_least_2_items">Select items</string>
    <string name="successfully">Successfully</string>
    <string name="set_as_ringtone">Set as Ringtone</string>
    <string name="enter_name_of_your_sound">Enter name of your sound...</string>
    <string name="are_you_sure_want_to_delete_this_file">Are you sure want to delete this file?</string>
    <string name="cut">Cut</string>
    <string name="rename">Rename</string>
    <string name="phone_ringtone">Phone ringtone</string>
    <string name="sms_ringtone">SMS ringtone</string>
    <string name="alarm">Alarm</string>
    <string name="equalizer_has_no_items_here">Equalizer has no items here</string>
    <string name="merge_has_no_items_here">Merge has no items here</string>
    <string name="mixer_has_no_items_here">Mixer has no items here</string>
    <string name="mp3_cutter_has_no_items_here">MP3 Cutter has no items here</string>
    <string name="speed_has_no_items_here">Speed has no items here</string>
    <string name="voice_changer_has_no_items_here">Voice Changer has no items here</string>
    <string name="volume_has_no_items_here">Volume has no items here</string>
    <string name="you_can_only_select_up_to_2_files">You can only select up to 2 files.</string>
    <string name="home">Home</string>
    <string name="file_deleted_successfully">File deleted successfully</string>
    <string name="the_audio_files_have_been_saved_successfully">The audio files have been saved successfully!</string>
    <string name="you_can_only_delete_when_there_are_at_least_3_files">At least 2 audios are required to mix</string>
    <string name="minimum_cutting_time_1_s">Minimum cutting time 1 s</string>
    <string name="cut1">Please edit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lyrics_c_sao_ch_p">Lyrics đã được sao chép!</string>
    <string name="kh_ng_c_lyrics_sao_ch_p">Không có lyrics để sao chép!</string>
    <string name="you_can_only_select_up_to_5_files">You can only select up to 5 files.</string>
</resources>