<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <androidx.constraintlayout.widget.ConstraintLayout
            app:cardCornerRadius="10dp"
            android:layout_width="284dp"
            android:layout_height="346dp">

<LinearLayout

    android:background="@drawable/rategrouns"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
>
    <ImageView
        android:id="@+id/emojiImageView"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:src="@drawable/rate1" />

    <TextView
        android:id="@+id/titleTextView"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/do_you_like_the_app"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center" />

    <TextView
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/let_us_know_your_experience"
        android:textSize="16sp"
        android:textColor="#99FFFFFF"
        android:gravity="center" />

        <com.willy.ratingbar.ScaleRatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:srb_clearRatingEnabled="false"
            app:srb_clickable="true"
            app:srb_drawableEmpty="@drawable/ic_rate2"
            app:srb_drawableFilled="@drawable/ic_rate"
            app:srb_isIndicator="false"
            app:srb_minimumStars="0"
            app:srb_numStars="5"
            app:srb_rating="0"
            app:srb_scrollable="true"
            app:srb_starHeight="30dp"
            app:srb_starPadding="4dp"
            app:srb_starWidth="30dp"
            app:srb_stepSize="1" />

        <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        android:id="@+id/rateButton"
        android:layout_width="232dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp">
        <TextView
            android:textSize="16dp"
            android:background="@drawable/shape_with_borders"
            android:text="@string/rate"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/exitButton"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textSize="16dp"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:gravity="center" />
    </LinearLayout>
</LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</layout>