<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/viendialog"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/message"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/set_as_ringtone"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
<LinearLayout
    android:layout_marginLeft="24dp"
    android:id="@+id/Phoneringtone"
    android:orientation="horizontal"
    android:layout_marginTop="18dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/message">
    <ImageView
        android:id="@+id/check1"
        android:src="@drawable/radiofalse"
        android:layout_width="24dp"
        android:layout_height="24dp"/>
    <TextView
        android:layout_marginLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/phone_ringtone"
        android:textColor="@color/white"
        android:textSize="14dp"
 />
</LinearLayout>


            <LinearLayout
                android:id="@+id/smsringtone"
                android:layout_marginLeft="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Phoneringtone">

                <ImageView
                    android:id="@+id/check2"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/radiofalse" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:text="@string/sms_ringtone"
                    android:textColor="@color/white"
                    android:textSize="14dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Alarm"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/smsringtone">
                <ImageView
                    android:id="@+id/check3"
                    android:src="@drawable/radiofalse"
                    android:layout_width="24dp"
                    android:layout_height="24dp"/>
                <TextView
                    android:layout_marginLeft="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/alarm"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Alarm">

                <LinearLayout
                    android:layout_width="133dp"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/vientex">

                        <TextView
                            android:id="@+id/no"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/no"
                            android:textColor="@color/white"
                            android:textSize="16dp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="132dp"
                    android:layout_height="35dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="132dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/corlorbo">

                        <TextView
                            android:id="@+id/yes"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/yes"
                            android:textColor="@color/white"
                            android:textSize="16dp" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
